[B]Version 1.0.1[/B]
- Check for cancelled progress dialog while downloading playlist

[B]Version 1.0.0[/B]
- Updated to use script.module.simplejson
- Display progressbar while loading playlist

[B]Version 0.1.2[/B]
- Now uses library module for Danish addons
- Added support for geo protected video clips such as Tour de France

[B]Version 0.1.1[/B]
- Fix loading on Windows

[B]Version 0.1.0[/B]
- Initial version
- Some videos are not working, because the playlist retrieved contains an invalid video file link.[CR]I am investigating