@@ -74,7 +74,7 @@
 
 <addon
 	id="plugin.video.tv2.dk"
-	version="1.0.1"
+	version="1.0.2"
 	name="TV2 Video"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
